Include Google JS map and related JS dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 
 data/.DS_Store
+
+project/src/.DS_Store
+
+project/src/main/.DS_Store
+
+project/src/main/java/.DS_Store
+
+project/src/main/webapp/.DS_Store
+
+project/src/main/webapp/resources/.DS_Store
+
+project/src/main/webapp/resources/data/.DS_Store
+
+project/src/main/webapp/resources/data/sf/.DS_Store
+
+project/src/main/webapp/resources/scripts/.DS_Store
