--- a/project/pom.xml
+++ b/project/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.heroku.sample</groupId>
-  <artifactId>embeddedTomcatSample</artifactId>
+  <artifactId>urban-data-challenge</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>embeddedTomcatSample Maven Webapp</name>
+  <name>urban-data-challenge</name>
   <url>http://maven.apache.org</url>
   <properties>
     <tomcat.version>7.0.34</tomcat.version>
@@ -42,7 +42,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>embeddedTomcatSample</finalName>
+    <finalName>urban-data-challenge</finalName>
     <plugins>
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
