--- a/project/src/main/webapp/WEB-INF/web.xml
+++ b/project/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,42 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+	<display-name>Restful Web Application</display-name>
+ 
+	<context-param>
+		<param-name>contextPath</param-name>
+		<param-value>/</param-value>
+	</context-param>
+		  
+	<servlet>
+		<servlet-name>stop-service</servlet-name>
+		<servlet-class>
+			com.sun.jersey.spi.container.servlet.ServletContainer
+		</servlet-class>
+		<init-param>
+		     <param-name>com.sun.jersey.config.property.packages</param-name>
+		     <param-value>urban.data.challenge.rest</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+ 
+	<servlet-mapping>
+		<servlet-name>stop-service</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+    	<servlet-name>Test</servlet-name>
+    	<servlet-class>urban.data.challenge.Test</servlet-class>
+  	</servlet>
+  	<servlet-mapping>
+    	<servlet-name>Test</servlet-name>
+    	<url-pattern>/test</url-pattern>
+  	</servlet-mapping>
+	
+ 
 </web-app>
