--- a/.gitignore
+++ b/.gitignore
@@ -23,14 +23,6 @@ project/postgres.py
 
 schema/create-sf-arrivals-table.sql
 
-data/sf/routes.csv
-
-data/sf/stops.csv
-
-data/sf/routes.json
-
-data/sf/stops.json
-
 udc2013/
 
 data/sf/sf-route-1-schedule-real.csv
@@ -51,78 +43,9 @@ project/src/main/webapp/WEB-INF/lib/tomcat-api-7.0.34.jar
 
 *.class
 
-project/target/repo/org/apache/tomcat/embed/tomcat-embed-core/maven-metadata-appassembler.xml
+project/target
 
 project/src/main/webapp/stop-lat-long.java
+project/.project
 
-project/target/urban-data-challenge/index.jsp
-
-project/target/urban-data-challenge/map.html
-
-project/target/urban-data-challenge/resources/data/sf/routes/routes.json
-
-project/target/urban-data-challenge/resources/data/sf/routes/routes.csv
-
-*.csv
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/img/glyphicons-halflings.png
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/css/bootstrap.css
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/css/bootstrap.min.css
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/img/glyphicons-halflings-white.png
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/js/bootstrap.js
-
-project/target/urban-data-challenge/resources/scripts/leaflet.js
-
-project/target/urban-data-challenge/resources/scripts/leaflet.css
-
-project/target/urban-data-challenge/resources/scripts/leaflet.ie.css
-
-project/target/urban-data-challenge/resources/scripts/jquery-1.9.1.min.js
-
-project/target/urban-data-challenge/resources/scripts/d3.v2.js
-
-project/target/urban-data-challenge/resources/scripts/crossfilter.v1.js
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/js/bootstrap.min.js
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/css/bootstrap-responsive.min.css
-
-project/target/urban-data-challenge/resources/scripts/bootstrap/css/bootstrap-responsive.css
-
-project/target/urban-data-challenge/resources/scripts/GeoJSON.js
-
-project/target/urban-data-challenge/resources/data/sf/stops/stops.json
-
-project/target/repo/org/apache/tomcat/embed/tomcat-embed-jasper/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/embed/tomcat-embed-logging-juli/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-api/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-el-api/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-jasper-el/maven-metadata-appassembler.xml
-
-project/target/urban-data-challenge.jar
-
-project/target/repo/org/eclipse/jdt/core/compiler/ecj/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-util/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-servlet-api/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-juli/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-jsp-api/maven-metadata-appassembler.xml
-
-project/target/repo/org/apache/tomcat/tomcat-jasper/maven-metadata-appassembler.xml
-
-project/target/repo/com/heroku/sample/urban-data-challenge/maven-metadata-appassembler.xml
-
-project/target/repo/com/heroku/sample/urban-data-challenge/1.0-SNAPSHOT/urban-data-challenge-1.0-SNAPSHOT.jar
-
-project/target/repo/com/heroku/sample/urban-data-challenge/1.0-SNAPSHOT/maven-metadata-appassembler.xml
+project/.classpath
