--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,9 @@ project/target/maven-archiver/pom.properties
 project/target/classes/launch/Main.class
 
 python/pandas/
+
+data/zurich/zurich-schedule-vs-arrival.csv
+
+python/Zurich.ipynb
+
+python/pandas.zip
